--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /outputs/**
 /src/data
 /src/outputs
-/pre_trained_models
-/src/pre_trained_models
+**/pre_trained_models
+/src/pre_trained_models/*
 *.pdf
 *.pyc
